--- a/OpenCV_Swift/Info.plist
+++ b/OpenCV_Swift/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSFileProviderDomainUsageDescription</key>
+	<string></string>
+	<key>NSCameraUsageDescription</key>
+	<string>映像を出力するため、カメラを起動します。</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>Send pictures from App</string>
 	<key>NSPhotoLibraryUsageDescription</key>
